@@ -24,6 +24,9 @@ StatementMacros:
   - SERD_CONST_API
   - SERD_CONST_FUNC
   - SERD_DEPRECATED_BY
+  - SERD_I_MALLOC_FUNC
+  - SERD_MALLOC_API
+  - SERD_MALLOC_FUNC
   - SERD_PURE_API
   - SERD_PURE_FUNC
   - _Pragma
