@@ -96,6 +96,7 @@ sources = [
   'src/syntax.c',
   'src/system.c',
   'src/uri.c',
+  'src/world.c',
   'src/writer.c',
 ]
 
