@@ -18,9 +18,9 @@
 #define SERD_ATTRIBUTES_H
 
 #ifdef __GNUC__
-#  define SERD_MALLOC_FUNC __attribute__((malloc))
+#  define SERD_I_MALLOC_FUNC __attribute__((malloc))
 #else
-#  define SERD_MALLOC_FUNC
+#  define SERD_I_MALLOC_FUNC
 #endif
 
 #endif // SERD_ATTRIBUTES_H
