@@ -27,16 +27,18 @@ FILE*
 serd_fopen(const char* path, const char* mode);
 
 /// Allocate a buffer aligned to `alignment` bytes
-SERD_MALLOC_FUNC void*
+SERD_I_MALLOC_FUNC
+void*
 serd_malloc_aligned(size_t alignment, size_t size);
 
 /// Allocate a zeroed buffer aligned to `alignment` bytes
-SERD_MALLOC_FUNC
+SERD_I_MALLOC_FUNC
 void*
 serd_calloc_aligned(size_t alignment, size_t size);
 
 /// Allocate an aligned buffer for I/O
-SERD_MALLOC_FUNC void*
+SERD_I_MALLOC_FUNC
+void*
 serd_allocate_buffer(size_t size);
 
 /// Free a buffer allocated with an aligned allocation function
